# ppt-handout-generator

./: .gitignore  README.md  pyproject.toml  run_extractor.bat  simple_extractor.py  讲义_证明.docx  讲义_证明.md
audio/: extract_audio.py  setup.py  transcribe.py
ppt_keyframe_extractor/: __init__.py  types.py
ppt_keyframe_extractor/core/: __init__.py  animation_handler.py  frame_clusterer.py  frame_sampler.py  keyframe_selector.py  occlusion_scorer.py  person_detector.py  pipeline.py  slide_detector.py
ppt_keyframe_extractor/models/: __init__.py  bg_subtractor.py  onnx_segmenter.py  yolo_segmenter.py
ppt_keyframe_extractor/utils/: __init__.py  image_utils.py  pdf_builder.py  video_io.py
