[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ppt-keyframe-extractor"
version = "0.1.0"
description = "Extract PPT keyframes from lecture videos with minimal teacher occlusion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ppt-keyframe-extractor contributors"},
]
keywords = ["ppt", "keyframe", "lecture", "video", "pdf", "occlusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Education",
]

dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "scikit-image>=0.21",
    "onnxruntime>=1.18",
    "img2pdf>=0.5",
    "Pillow>=10.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["ppt_keyframe_extractor*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
